// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostSelectAudience screen render correctly with 1 group selected 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      testID="header"
    >
      <View
        style={
          Array [
            Object {
              "height": undefined,
            },
            Object {
              "alignItems": "flex-end",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "overflow": "hidden",
              "paddingTop": 0,
            },
            Object {
              "borderBottomWidth": 0.5,
              "borderColor": "#E3E6F2",
              "elevation": 2,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 1,
            },
            undefined,
          ]
        }
        testID="header.content"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flex": 1,
              "flexDirection": "row",
              "height": 60,
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="header.back.button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "alignItems": "center",
                    "height": 48,
                    "justifyContent": "center",
                    "padding": 12,
                    "width": 48,
                  },
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="header.back"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "marginLeft": 16,
                  "paddingTop": 1.5,
                },
                Object {},
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-SemiBold",
                      "fontSize": 17,
                    },
                    Object {},
                    Object {
                      "height": 24,
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="header.text"
              >
                Select Audiences
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D1D4DB",
                "borderColor": "#7335C0",
                "borderRadius": 4,
                "borderWidth": 0,
                "height": 40,
                "marginRight": 4,
                "padding": 8,
              }
            }
            testID="select_audience.btn_done"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
              testID="button_wrapper.content"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-Medium",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#A4A9B7",
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ]
                }
                testID="header.button.text"
              >
                Done
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "height": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "margin": 12,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {
                  "marginRight": 8,
                },
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
        <TextInput
          autoComplete="off"
          autoFocus={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Search for groups or people"
          placeholderTextColor="#767D93"
          returnKeyType="search"
          selectionColor="#767D93"
          style={
            Object {
              "color": "#181C32",
              "flex": 1,
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 15,
              "height": "100%",
            }
          }
          testID="post_select_audience.search"
          value=""
        />
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={[Function]}
      ListHeaderComponent={[Function]}
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "children": Array [
                  Object {
                    "background_img_url": null,
                    "chat_id": "rpq3unai7i8ztprmoz97rdjr7w",
                    "children": Array [],
                    "created_at": "2022-01-10T10:04:48.685Z",
                    "deleted_at": null,
                    "description": "The greatest community ever",
                    "group_type": "COMPANY",
                    "icon": "",
                    "id": 1,
                    "isChecked": false,
                    "level": 0,
                    "name": "EVOL Community",
                    "owner_id": 1,
                    "parent_id": null,
                    "parents": null,
                    "privacy": "PUBLIC",
                    "slug": "evol-community-1641809088",
                    "testID": "post_select_audience.groups.item",
                    "unique": "5ef2593a-a47c-4419-a7ba-693e862418cb",
                    "updated_at": "2022-01-10T10:04:48.928Z",
                    "user_count": "25",
                  },
                ],
                "description": "The greatest community ever",
                "icon": "",
                "id": 1,
                "name": "EVOL Community",
                "parent_id": null,
                "parents": null,
                "unique": "6f17969b-0776-47eb-8561-6992e4acb006",
                "user_count": "25",
              },
            ],
            "title": "Groups",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={
        Array [
          1,
        ]
      }
      style={
        Object {
          "paddingHorizontal": 16,
        }
      }
    >
      <View>
        <View
          onLayout={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-SemiBold",
                  "fontSize": 15,
                },
                Object {},
                Object {
                  "marginVertical": 8,
                },
              ]
            }
          >
            Search Results
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#181C32",
                    "fontFamily": "BeVietnamPro-SemiBold",
                    "fontSize": 15,
                  },
                  Object {},
                  Object {
                    "marginVertical": 8,
                  },
                ]
              }
            >
              Groups
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                  testID="button_wrapper.content"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#E3E6F2",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "marginRight": 4,
                        "width": 16,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        Object {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={false}
                      hitSlop={
                        Object {
                          "bottom": 10,
                          "left": 10,
                          "right": 10,
                          "top": 10,
                        }
                      }
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                            Object {
                              "backgroundColor": undefined,
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              undefined,
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <View />
                        </View>
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#181C32",
                          "fontFamily": "BeVietnamPro-Light",
                          "fontSize": 15,
                        },
                        Object {},
                        Object {
                          "paddingRight": 20,
                        },
                      ]
                    }
                  >
                    EVOL Community
                     
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#181C32",
                            "fontFamily": "BeVietnamPro-Light",
                            "fontSize": 15,
                          },
                          Object {
                            "color": "#602CA0",
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="group_item.container"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
                testID="post_select_audience.groups.item"
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                      "paddingVertical": 4,
                    }
                  }
                >
                  <View>
                    <View
                      style={
                        Object {
                          "borderRadius": 4,
                          "height": 40,
                          "width": 40,
                        }
                      }
                      testID="avatar"
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#A4A9B7",
                            "borderRadius": 4,
                            "height": 40,
                            "width": 40,
                          }
                        }
                        testID="avatar_container"
                      >
                        <View
                          onLayout={[Function]}
                          style={
                            Object {
                              "backgroundColor": "transparent",
                              "position": "relative",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "opacity": 1,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#f9f9f9",
                                  "borderRadius": 4,
                                  "height": 40,
                                  "justifyContent": "center",
                                  "width": 40,
                                }
                              }
                              testID="Image__placeholder"
                            />
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "overflow": "hidden",
                                },
                                Object {
                                  "borderRadius": 4,
                                  "height": 40,
                                  "width": 40,
                                },
                              ]
                            }
                          >
                            <FastImageView
                              onFastImageError={[Function]}
                              onFastImageLoadEnd={[Function]}
                              resizeMode="cover"
                              source={null}
                              style={
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                }
                              }
                              testID="avatar.image"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "bottom": -3,
                          "opacity": 1,
                          "position": "absolute",
                          "right": -6,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#E3E6F2",
                            "borderColor": "#A4A9B7",
                            "borderRadius": 6,
                            "borderWidth": 1,
                            "height": 20,
                            "justifyContent": "center",
                            "width": 20,
                          }
                        }
                        testID="group_item.check_box"
                      >
                        <View
                          accessibilityState={
                            Object {
                              "disabled": true,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={false}
                          hitSlop={
                            Object {
                              "bottom": 10,
                              "left": 10,
                              "right": 10,
                              "top": 10,
                            }
                          }
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                                undefined,
                                Object {
                                  "backgroundColor": undefined,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <View>
                                <View
                                  onLayout={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "transparent",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <View
                                    collapsable={false}
                                    style={
                                      Object {
                                        "bottom": 0,
                                        "left": 0,
                                        "opacity": 1,
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#f9f9f9",
                                          "height": 18,
                                          "justifyContent": "center",
                                          "width": 18,
                                        }
                                      }
                                      testID="Image__placeholder"
                                    />
                                  </View>
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "overflow": "hidden",
                                        },
                                        Object {
                                          "height": 18,
                                          "width": 18,
                                        },
                                      ]
                                    }
                                  >
                                    <FastImageView
                                      onFastImageError={[Function]}
                                      onFastImageLoadEnd={[Function]}
                                      resizeMode="cover"
                                      size={18}
                                      source={null}
                                      style={
                                        Object {
                                          "bottom": 0,
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "paddingHorizontal": 12,
                      }
                    }
                  >
                    <Text
                      numberOfLines={2}
                      style={
                        Array [
                          Object {
                            "color": "#181C32",
                            "fontFamily": "BeVietnamPro-SemiBold",
                            "fontSize": 15,
                          },
                          Object {},
                          Object {
                            "maxWidth": 200,
                            "paddingTop": 2,
                          },
                        ]
                      }
                    >
                      EVOL Community
                    </Text>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          Object {
                            "disabled": true,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        hitSlop={
                          Object {
                            "bottom": 10,
                            "left": 10,
                            "right": 10,
                            "top": 10,
                          }
                        }
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                              },
                              undefined,
                              Object {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                undefined,
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View />
                          </View>
                        </View>
                      </View>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#181C32",
                              "fontFamily": "BeVietnamPro-Light",
                              "fontSize": 13,
                            },
                            Object {
                              "color": "#767D93",
                            },
                            Object {
                              "marginHorizontal": 4,
                            },
                          ]
                        }
                      >
                        25
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
        <View
          onLayout={[Function]}
        >
          <View />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`PostSelectAudience screen render correctly with group item 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      testID="header"
    >
      <View
        style={
          Array [
            Object {
              "height": undefined,
            },
            Object {
              "alignItems": "flex-end",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "overflow": "hidden",
              "paddingTop": 0,
            },
            Object {
              "borderBottomWidth": 0.5,
              "borderColor": "#E3E6F2",
              "elevation": 2,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 1,
            },
            undefined,
          ]
        }
        testID="header.content"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flex": 1,
              "flexDirection": "row",
              "height": 60,
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="header.back.button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "alignItems": "center",
                    "height": 48,
                    "justifyContent": "center",
                    "padding": 12,
                    "width": 48,
                  },
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="header.back"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "marginLeft": 16,
                  "paddingTop": 1.5,
                },
                Object {},
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-SemiBold",
                      "fontSize": 17,
                    },
                    Object {},
                    Object {
                      "height": 24,
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="header.text"
              >
                Select Audiences
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D1D4DB",
                "borderColor": "#7335C0",
                "borderRadius": 4,
                "borderWidth": 0,
                "height": 40,
                "marginRight": 4,
                "padding": 8,
              }
            }
            testID="select_audience.btn_done"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
              testID="button_wrapper.content"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-Medium",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#A4A9B7",
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ]
                }
                testID="header.button.text"
              >
                Done
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "height": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "margin": 12,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {
                  "marginRight": 8,
                },
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
        <TextInput
          autoComplete="off"
          autoFocus={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Search for groups or people"
          placeholderTextColor="#767D93"
          returnKeyType="search"
          selectionColor="#767D93"
          style={
            Object {
              "color": "#181C32",
              "flex": 1,
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 15,
              "height": "100%",
            }
          }
          testID="post_select_audience.search"
          value=""
        />
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={[Function]}
      ListHeaderComponent={[Function]}
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "children": Array [
                  Object {
                    "background_img_url": null,
                    "chat_id": "rpq3unai7i8ztprmoz97rdjr7w",
                    "children": Array [],
                    "created_at": "2022-01-10T10:04:48.685Z",
                    "deleted_at": null,
                    "description": "The greatest community ever",
                    "group_type": "COMPANY",
                    "icon": "",
                    "id": 1,
                    "isChecked": false,
                    "level": 0,
                    "name": "EVOL Community",
                    "owner_id": 1,
                    "parent_id": null,
                    "parents": null,
                    "privacy": "PUBLIC",
                    "slug": "evol-community-1641809088",
                    "testID": "post_select_audience.groups.item",
                    "unique": "5ef2593a-a47c-4419-a7ba-693e862418cb",
                    "updated_at": "2022-01-10T10:04:48.928Z",
                    "user_count": "25",
                  },
                ],
                "description": "The greatest community ever",
                "icon": "",
                "id": 1,
                "name": "EVOL Community",
                "parent_id": null,
                "parents": null,
                "unique": "6f17969b-0776-47eb-8561-6992e4acb006",
                "user_count": "25",
              },
            ],
            "title": "Groups",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={
        Array [
          1,
        ]
      }
      style={
        Object {
          "paddingHorizontal": 16,
        }
      }
    >
      <View>
        <View
          onLayout={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-SemiBold",
                  "fontSize": 15,
                },
                Object {},
                Object {
                  "marginVertical": 8,
                },
              ]
            }
          >
            Search Results
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#181C32",
                    "fontFamily": "BeVietnamPro-SemiBold",
                    "fontSize": 15,
                  },
                  Object {},
                  Object {
                    "marginVertical": 8,
                  },
                ]
              }
            >
              Groups
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                  testID="button_wrapper.content"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#E3E6F2",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "marginRight": 4,
                        "width": 16,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        Object {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={false}
                      hitSlop={
                        Object {
                          "bottom": 10,
                          "left": 10,
                          "right": 10,
                          "top": 10,
                        }
                      }
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                            Object {
                              "backgroundColor": undefined,
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              undefined,
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <View />
                        </View>
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#181C32",
                          "fontFamily": "BeVietnamPro-Light",
                          "fontSize": 15,
                        },
                        Object {},
                        Object {
                          "paddingRight": 20,
                        },
                      ]
                    }
                  >
                    EVOL Community
                     
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#181C32",
                            "fontFamily": "BeVietnamPro-Light",
                            "fontSize": 15,
                          },
                          Object {
                            "color": "#602CA0",
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="group_item.container"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
                testID="post_select_audience.groups.item"
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                      "paddingVertical": 4,
                    }
                  }
                >
                  <View>
                    <View
                      style={
                        Object {
                          "borderRadius": 4,
                          "height": 40,
                          "width": 40,
                        }
                      }
                      testID="avatar"
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#A4A9B7",
                            "borderRadius": 4,
                            "height": 40,
                            "width": 40,
                          }
                        }
                        testID="avatar_container"
                      >
                        <View
                          onLayout={[Function]}
                          style={
                            Object {
                              "backgroundColor": "transparent",
                              "position": "relative",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "opacity": 1,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#f9f9f9",
                                  "borderRadius": 4,
                                  "height": 40,
                                  "justifyContent": "center",
                                  "width": 40,
                                }
                              }
                              testID="Image__placeholder"
                            />
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "overflow": "hidden",
                                },
                                Object {
                                  "borderRadius": 4,
                                  "height": 40,
                                  "width": 40,
                                },
                              ]
                            }
                          >
                            <FastImageView
                              onFastImageError={[Function]}
                              onFastImageLoadEnd={[Function]}
                              resizeMode="cover"
                              source={null}
                              style={
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                }
                              }
                              testID="avatar.image"
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "bottom": -3,
                          "opacity": 1,
                          "position": "absolute",
                          "right": -6,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#E3E6F2",
                            "borderColor": "#A4A9B7",
                            "borderRadius": 6,
                            "borderWidth": 1,
                            "height": 20,
                            "justifyContent": "center",
                            "width": 20,
                          }
                        }
                        testID="group_item.check_box"
                      >
                        <View
                          accessibilityState={
                            Object {
                              "disabled": true,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={false}
                          hitSlop={
                            Object {
                              "bottom": 10,
                              "left": 10,
                              "right": 10,
                              "top": 10,
                            }
                          }
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                                undefined,
                                Object {
                                  "backgroundColor": undefined,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <View>
                                <View
                                  onLayout={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "transparent",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <View
                                    collapsable={false}
                                    style={
                                      Object {
                                        "bottom": 0,
                                        "left": 0,
                                        "opacity": 1,
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#f9f9f9",
                                          "height": 18,
                                          "justifyContent": "center",
                                          "width": 18,
                                        }
                                      }
                                      testID="Image__placeholder"
                                    />
                                  </View>
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "overflow": "hidden",
                                        },
                                        Object {
                                          "height": 18,
                                          "width": 18,
                                        },
                                      ]
                                    }
                                  >
                                    <FastImageView
                                      onFastImageError={[Function]}
                                      onFastImageLoadEnd={[Function]}
                                      resizeMode="cover"
                                      size={18}
                                      source={null}
                                      style={
                                        Object {
                                          "bottom": 0,
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "paddingHorizontal": 12,
                      }
                    }
                  >
                    <Text
                      numberOfLines={2}
                      style={
                        Array [
                          Object {
                            "color": "#181C32",
                            "fontFamily": "BeVietnamPro-SemiBold",
                            "fontSize": 15,
                          },
                          Object {},
                          Object {
                            "maxWidth": 200,
                            "paddingTop": 2,
                          },
                        ]
                      }
                    >
                      EVOL Community
                    </Text>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          Object {
                            "disabled": true,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        hitSlop={
                          Object {
                            "bottom": 10,
                            "left": 10,
                            "right": 10,
                            "top": 10,
                          }
                        }
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                              },
                              undefined,
                              Object {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                undefined,
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View />
                          </View>
                        </View>
                      </View>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#181C32",
                              "fontFamily": "BeVietnamPro-Light",
                              "fontSize": 13,
                            },
                            Object {
                              "color": "#767D93",
                            },
                            Object {
                              "marginHorizontal": 4,
                            },
                          ]
                        }
                      >
                        25
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
        <View
          onLayout={[Function]}
        >
          <View />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`PostSelectAudience screen renders correctly with params isFirstStep 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      testID="header"
    >
      <View
        style={
          Array [
            Object {
              "height": undefined,
            },
            Object {
              "alignItems": "flex-end",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "overflow": "hidden",
              "paddingTop": 0,
            },
            Object {
              "borderBottomWidth": 0.5,
              "borderColor": "#E3E6F2",
              "elevation": 2,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 1,
            },
            undefined,
          ]
        }
        testID="header.content"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flex": 1,
              "flexDirection": "row",
              "height": 60,
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="header.back.button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "alignItems": "center",
                    "height": 48,
                    "justifyContent": "center",
                    "padding": 12,
                    "width": 48,
                  },
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="header.back"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "marginLeft": 16,
                  "paddingTop": 1.5,
                },
                Object {},
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-SemiBold",
                      "fontSize": 17,
                    },
                    Object {},
                    Object {
                      "height": 24,
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="header.text"
              >
                Select Audiences
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D1D4DB",
                "borderColor": "#7335C0",
                "borderRadius": 4,
                "borderWidth": 0,
                "height": 40,
                "marginRight": 4,
                "padding": 8,
              }
            }
            testID="select_audience.btn_done"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
              testID="button_wrapper.content"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-Medium",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#A4A9B7",
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ]
                }
                testID="header.button.text"
              >
                Next
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "height": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "margin": 12,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {
                  "marginRight": 8,
                },
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
        <TextInput
          autoComplete="off"
          autoFocus={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Search for groups or people"
          placeholderTextColor="#767D93"
          returnKeyType="search"
          selectionColor="#767D93"
          style={
            Object {
              "color": "#181C32",
              "flex": 1,
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 15,
              "height": "100%",
            }
          }
          testID="post_select_audience.search"
          value=""
        />
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListFooterComponent={[Function]}
      ListHeaderComponent={[Function]}
      data={Array []}
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "paddingHorizontal": 16,
        }
      }
    >
      <View>
        <View
          onLayout={[Function]}
        />
        <View
          onLayout={[Function]}
        >
          <View>
            <ActivityIndicator
              color="#E3E6F2"
              size="large"
            />
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
